fix dependency loader, material picker